After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704100 - basesrc: Negotiation failures if set to flushing between stream-start event and negotiation
basesrc: Negotiation failures if set to flushing between stream-start event a...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: Normal normal
: 1.1.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-12 14:39 UTC by Mathieu Duponchelle
Modified: 2013-07-15 09:46 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mathieu Duponchelle 2013-07-12 14:39:28 UTC
The problems are most easily revealed by running make ges/mixers.check, 
an error will occur:

0:00:00.089797421  7467 0x7f9f980030a0 ERROR                basesrc gstbasesrc.c:1402:gst_base_src_default_alloc:<audiotestsrc1> Failed to allocate 4294967295 bytes

indicating audiotestsrc most probably didn't have its caps negotiated.

A similar scenario happens with videotestsrc as well, and I expect other problems from various elements.
Comment 1 Mathieu Duponchelle 2013-07-12 14:47:27 UTC
948a9d2f2b728f5fb60be45d47a818cebeb60c7d in core revealed the problem.
Comment 2 Sebastian Dröge (slomo) 2013-07-15 09:46:08 UTC
commit c279bdb663de532be58b31970b26ff515ff4f098
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Mon Jul 15 11:36:18 2013 +0200

    pad: A newly activated pad should be marked as needing reconfiguration

commit 942d905e19612958b9f9d2c7ed5123899ae36693
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Mon Jul 15 11:32:54 2013 +0200

    Revert "pad: Don't consider flushing pads as needing reconfiguration"
    
    This reverts commit 948a9d2f2b728f5fb60be45d47a818cebeb60c7d.
    
    This is racy and trying to reconfigure and fail is still better
    than not trying to reconfigure at all.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=704100

commit d60c2c2864a3438397b7e27c741566dfc805954b
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Mon Jul 15 11:32:10 2013 +0200

    basesrc: Leave the loop function faster if we're flushing
    
    Especially don't even try to send stream-start event or try
    to negotiate.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=704100