basesrc: Leave the loop function faster if we're flushing

Especially don't even try to send stream-start event or try
to negotiate.

https://bugzilla.gnome.org/show_bug.cgi?id=704100